# backend/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuditsController;
+use App\Http\Controllers\DataUnitsController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -15,5 +16,14 @@ Route::prefix('v1')->group(function () {
     Route::get('exportAuditsToExcel', [AuditsController::class, 'exportAuditsToExcel']);
 });
 
-// Route::middleware('auth:sanctum')->apiResource('/audits', AuditsController::class);
+// Define the routes for the DataUnits API
+Route::prefix('v1')->group(function () {
+    Route::get('dataUnits', [DataUnitsController::class, 'getDataUnits']);
+    Route::get('dataUnit/{id}', [DataUnitsController::class, 'getDataUnit']);
+    Route::get('exportDataUnitsToExcel', [DataUnitsController::class, 'exportDataUnitsToExcel']);
+    Route::post('dataUnit', [DataUnitsController::class, 'insertDataUnit']);
+    Route::put('dataUnit/{id}', [DataUnitsController::class, 'updateDataUnit']);
+    Route::delete('dataUnit/{id}', [DataUnitsController::class, 'deleteDataUnit']);
+});
 
+// Route::middleware('auth:sanctum')->apiResource('/audits', AuditsController::class);
